[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-frontier"
version = "0.1.0"
description = "SF City Intelligence Agent Scrapers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",           # async HTTP for all agents
    "praw>=7.7",              # Reddit API wrapper
    "python-dotenv>=1.0",     # .env file loading
    "requests>=2.31",         # sync HTTP (GTFS downloads)
    "aperture-nexus @ file://../aperture-nexus",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
sf-agents = "main:main"
