[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-frontier"
version = "0.1.0"
description = "SF City Intelligence Agent Scrapers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",           # async HTTP for all agents
    "praw>=7.7",              # Reddit API wrapper
    "python-dotenv>=1.0",     # .env file loading
    "requests>=2.31",         # sync HTTP (image download in aperture-nexus)
    "aperture-nexus @ file://../aperture-nexus",
    # REST API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9", # multipart/form-data for /image upload
    "httpx>=0.27",             # async HTTP client for OSRM routing
    "openai>=1.30",            # optional — chat messages + image recognition
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
sf-agents = "main:main"
